--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,48 @@
-# Compiled class file
-*.class
+# Gradle
+.gradle/
+build/
+out/
+classes/
 
-# Log file
+# Eclipse
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+
+# IntelliJ IDEA
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+
+# NetBeans
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+# VS Code
+.vscode/
+
+# MacOS
+*.DS_Store
+
+# Fabric
+run/
 *.log
 
-# BlueJ files
-*.ctxt
+# Minecraft
+saves/
+screenshots/
+crash-reports/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Temporary files
+*.tmp
+*.temp
